implemented logic to highlight imported storages and to check/edit their client assignment

--- a/configs/navigation/admin.ini
+++ b/configs/navigation/admin.ini
@@ -15,3 +15,9 @@ storage.pages.edit.title = Edit Storage
 storage.pages.edit.route = mazelab-storage_edit
 storage.pages.edit.resource = mazelab-storage_storage
 storage.pages.edit.privilege = edit
+
+storage.pages.imports.label = Imports
+storage.pages.imports.title = Imports
+storage.pages.imports.route = mazelab-storage_imports
+storage.pages.imports.resource = mazelab-storage_storage
+storage.pages.imports.privilege = imports
