--- a/configs/routes.ini
+++ b/configs/routes.ini
@@ -46,6 +46,13 @@ routes.mazelab-storage_disable.defaults.controller = "storage"
 routes.mazelab-storage_disable.defaults.action = "disable"
 routes.mazelab-storage_disable.map.1 = "storageId"
 
+routes.mazelab-storage_imports.type = "Zend_Controller_Router_Route"
+routes.mazelab-storage_imports.route = "storages/imports"
+routes.mazelab-storage_imports.reverse = "storages/imports"
+routes.mazelab-storage_imports.defaults.module = "mazelab-storage"
+routes.mazelab-storage_imports.defaults.controller = "storage"
+routes.mazelab-storage_imports.defaults.action = "imports"
+
 [staging : production]
 
 [testing : production]
