added german localization

--- a/configs/navigation/admin.ini
+++ b/configs/navigation/admin.ini
@@ -4,14 +4,14 @@ storage.route = mazelab-storage_index
 storage.resource = mazelab-storage_storage
 storage.privilege = index
 
-storage.pages.add.label = Add Storage
-storage.pages.add.title = Add Storage
+storage.pages.add.label = New storage
+storage.pages.add.title = New storage
 storage.pages.add.route = mazelab-storage_add
 storage.pages.add.resource = mazelab-storage_storage
 storage.pages.add.privilege = add
 
-storage.pages.edit.label = Edit Storage
-storage.pages.edit.title = Edit Storage
+storage.pages.edit.label = Edit storage
+storage.pages.edit.title = Edit storage
 storage.pages.edit.route = mazelab-storage_edit
 storage.pages.edit.resource = mazelab-storage_storage
 storage.pages.edit.privilege = edit
