added storage links into the module list (detail view)

--- a/configs/routes.ini
+++ b/configs/routes.ini
@@ -1,5 +1,33 @@
 [production]
 
+;;;;;
+; config
+;;;
+routes.mazelab-storage_mainConfig.route = "storage/config"
+routes.mazelab-storage_mainConfig.reverse = "storage/config"
+routes.mazelab-storage_mainConfig.defaults.module = "mazelab-storage"
+routes.mazelab-storage_mainConfig.defaults.controller = "config"
+routes.mazelab-storage_mainConfig.defaults.action = "mainconfig"
+
+routes.mazelab-storage_clientConfig.type = "Zend_Controller_Router_Route_Regex"
+routes.mazelab-storage_clientConfig.route = "storage/config/client/(.+)"
+routes.mazelab-storage_clientConfig.reverse = "storage/config/client/%s"
+routes.mazelab-storage_clientConfig.defaults.module = "mazelab-storage"
+routes.mazelab-storage_clientConfig.defaults.controller = "config"
+routes.mazelab-storage_clientConfig.defaults.action = "clientconfig"
+routes.mazelab-storage_clientConfig.map.1 = "clientId"
+
+routes.mazelab-storage_nodeConfig.type = "Zend_Controller_Router_Route_Regex"
+routes.mazelab-storage_nodeConfig.route = "storage/config/node/(.+)"
+routes.mazelab-storage_nodeConfig.reverse = "storage/config/node/%s"
+routes.mazelab-storage_nodeConfig.defaults.module = "mazelab-storage"
+routes.mazelab-storage_nodeConfig.defaults.controller = "config"
+routes.mazelab-storage_nodeConfig.defaults.action = "nodeconfig"
+routes.mazelab-storage_nodeConfig.map.1 = "nodeId"
+
+;;;;;
+; storage
+;;;
 routes.mazelab-storage_edit.type = "Zend_Controller_Router_Route_Regex"
 routes.mazelab-storage_edit.route = "storages/(.+)"
 routes.mazelab-storage_edit.reverse = "storages/%s"
