--- a/module.ini
+++ b/module.ini
@@ -13,5 +13,10 @@ type = "vcs"
 vendor.name = "CDS-Internetagentur"
 vendor.email = "info@cds-internetagentur.de"
 
+[routes]
+config.config.route = "mazelab-storage_mainConfig"
+config.client.route = "mazelab-storage_clientConfig"
+config.node.route = "mazelab-storage_nodeConfig"
+
 [api]
 core = "MazelabStorage_Model_Api_Core"
