--- a/configs/acl.ini
+++ b/configs/acl.ini
@@ -2,7 +2,9 @@
 mazelab-storage_storage.* = disallow
 mazelab-storage_storage.index = allow
 mazelab-storage_storage.edit = allow
+mazelab-storage_config.* = disallow
 
 ; loggend in as admin
 [admin]
 mazelab-storage_storage.* = allow
+mazelab-storage_config.* = allow
